# kheops

./: .buildinfo  .gitignore  .gituuid  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
_sources/api/: kheops.plugin.rst.txt  modules.rst.txt
_sources/docs/app/: examples.rst.txt  internal.md.txt  usage.rst.txt
_sources/docs/guide/: best_practices.md.txt  index.rst.txt
_sources/docs/learn/: 100.rst.txt
_sources/learn/: learn101.md.txt
albero/: app.py  cli.py  managers.py  query.py  utils.py
albero/plugin/: common.py
albero/plugin/backend/: hier.py  init.py  loop.py
ansible_tree/: app.py  cli.py  managers.py  query.py  test.sh
ansible_tree/plugin/: __init__.py  common.py
api/: kheops.html  kheops.plugin.backend.html  kheops.plugin.engine.html  kheops.plugin.html  kheops.plugin.scope.html  kheops.plugin.strategy.html  modules.html
docs/: app_schema.json  build_doc.sh  conf.py  doc_config_html.yaml  doc_config_md.yaml  index.rst
docs/api/: kheops.plugin.backend.rst  kheops.plugin.engine.rst  kheops.plugin.rst  kheops.plugin.scope.rst  kheops.plugin.strategy.rst  kheops.rst  modules.rst
docs/app/: cli.html  config.html  examples.html  index.html  installation.html  internal.html  usage.html
docs/docs_md/: main.md
docs/guide/: best_practices.html  index.html
docs/jupyter/: learn101.ipynb
docs/learn/: 100.html  101.html  102.html  105.html  index.html
examples/: kheops.yml
examples/ex1_enc/: default.yml  env_dev.yml  env_prod.yml
kheops/: __init__.py  app.py  cli.py  controllers.py  managers.py  query.py  utils.py
kheops/plugin/: __init__.py  common.py
learn/: learn101.html
mkdocs/: mkdocs.yml
mkdocs/site/: 404.html  index.html  sitemap.xml
(+56 files in other folders)
