[tool.poetry]
name = "albero"
version = "0.1.0"
description = "Data trees for Ansible"
authors = ["Robin Cordier"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.3.3"
jsonmerge = "^1.8.0"
anyconfig = "^0.12.0"
python-box = "^5.4.1"
prettytable = "^3.0.0"

[tool.poetry.dev-dependencies]
json-schema-for-humans = "^0.40"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
albero = "albero.cli:CmdApp"
